package neural;

message SynapseConfiguration {
  optional double weight = 1;
}

message NeuronConfiguration {
  repeated SynapseConfiguration synapse = 1;
}

enum ActivationFunction {
  LINEAR = 0;
  RELU = 1;
  LOGISTIC = 2;
  TANH = 3;
}

message LayerConfiguration {
  // Activation function for this layer.
  optional ActivationFunction activation_function = 1;
  // Description of the number and weights of neurons in this layer. Note that
  // if weights are not provided, they will be randomly initialized.
  repeated NeuronConfiguration neuron = 2;
}

message NetworkConfiguration {
  // Number of inputs to the network.
  optional int32 inputs = 1;
  // Description of each hidden layer and the output layer of the network.
  repeated LayerConfiguration layer = 2;
}

message LearningConfiguration {
  // Number of times to iterate over training data.
  optional int32 epochs = 1;
  // Fixed learning rate.
  optional double rate = 2;
  // Size of training batches. Default to online learning.
  optional int32 batch_size = 3 [default = 1];
}
